1. XtormUtil 수정